Fixed but with menu on landscape on iphone

--- a/themes/black/style.css
+++ b/themes/black/style.css
@@ -211,7 +211,7 @@ a.overlay-next{right:0px;}
 
 
 /* Styles for larger screens */
-@media screen and (min-width: 30em) {
+@media screen and (min-width: 33em) {
 
 #main-menu-container {
 	background-color: #aaa;
